--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.6.2",
         "react-scripts": "5.0.1",
+        "react-toastify": "^9.1.1",
         "sass": "^1.57.1",
         "web-vitals": "^2.1.4"
     },
@@ -40,5 +41,9 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "@types/react": "^18.0.26",
+        "@types/react-dom": "^18.0.10"
     }
 }
